Uncheck "Load UI" causes failure in direct manipulation of nodes with certain files #128012

Closed
opened 2024-09-23 09:18:07 +02:00 by baoyu · 4 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.33

Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-09-22 23:31, hash: a34b0e17d624
Worked: 4.2

Short description of error
Usually, when a node is not selected, user could use the tweak tool move the node with on click.
Uncheck "Load UI" in preference causes failure in direct nodes manipulation.

Exact steps for others to reproduce the error

  • Download startup.blend
  • Open the file and go to the Shading tab.
  • Notice that you can click and drag on a node and it will shift that node.
  • Open Preferences and disable Load UI. This can be done by following these steps:
    • Select from the top of Blender Edit -> Preferences
    • Go to the Save & Load tab.
    • Disable the option Load UI
  • Reopen startup.blend by dragging it into the current Blender window.
  • Notice that you can not click and drag on nodes anymore. You have to click on a node, then let go, then you can drag.
  • Manually re-selecting the select tool in the tool bar of the node editor fixes this issue.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.33 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-09-22 23:31, hash: `a34b0e17d624` Worked: 4.2 **Short description of error** Usually, when a node is not selected, user could use the tweak tool move the node with on click. Uncheck "Load UI" in preference causes failure in direct nodes manipulation. **Exact steps for others to reproduce the error** - Download [startup.blend](/attachments/098c688d-33f2-4192-bbf8-7645c00228a4) - Open the file and go to the `Shading` tab. - Notice that you can click and drag on a node and it will shift that node. - Open Preferences and disable `Load UI`. This can be done by following these steps: - Select from the top of Blender `Edit -> Preferences` - Go to the `Save & Load` tab. - Disable the option `Load UI` - Reopen `startup.blend` by dragging it into the current Blender window. - Notice that you can not click and drag on nodes anymore. You have to click on a node, then let go, then you can drag. - Manually re-selecting the select tool in the tool bar of the node editor fixes this issue. <video src="/attachments/69893305-43d9-4541-b1b9-934f989e9c99" title="load UI.mp4" controls></video>
baoyu added the
Severity
Normal
Status
Needs Triage
Type
Bug
labels 2024-09-23 09:18:08 +02:00
Member

I am personally unable to reproduce this issue. Using the steps shown in the video. And here are my interpretation of the steps:

  • Open Blender
  • Open Preferences and disable Load UI
  • Press Control + N to open a new file, and notice that you can't directly move nodes anymore. You have click on them then you can move them.

A possible cause for this is the custom startup file you have. Are you able to share it with us? The file should be located at:
C:\Users\YOUR_NAME\AppData\Roaming\Blender Foundation\Blender\4.3\config\startup.blend


As a side note. I believe this is a similar issue to #126990

The default node editor tool (the select tool) probably isn't activated when you load your file with Load UI turned off.

I am personally unable to reproduce this issue. Using the steps shown in the video. And here are my interpretation of the steps: - Open Blender - Open Preferences and disable `Load UI` - Press `Control + N` to open a new file, and notice that you can't directly move nodes anymore. You have click on them then you can move them. A possible cause for this is the custom startup file you have. Are you able to share it with us? The file should be located at: `C:\Users\YOUR_NAME\AppData\Roaming\Blender Foundation\Blender\4.3\config\startup.blend` --- As a side note. I believe this is a similar issue to #126990 The default node editor tool (the select tool) probably isn't activated when you load your file with `Load UI` turned off.
Alaska added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2024-09-23 10:02:35 +02:00
Author
  • Open Preferences and disable Load UI
  • Press Control + N to open a new file, and notice that you can't directly move nodes anymore. You have click on them then you can move them.

Exactly.

I'm using a portable startup file. Here you go.

> - Open Preferences and disable `Load UI` > - Press `Control + N` to open a new file, and notice that you can't directly move nodes anymore. You have click on them then you can move them. Exactly. I'm using a portable startup file. Here you go.
baoyu changed title from Uncheck "Load UI" causes failure in direct nodes manipulation to Uncheck "Load UI" causes failure in direct manipulation of nodes 2024-09-23 10:35:53 +02:00
Member

Using the attached file, I can reproduce the issue.

It appears to be different from #126990.

I will mark as confirmed and high severity as it is a regression, and can look into bisecting what caused it.

Using the attached file, I can reproduce the issue. It appears to be different from #126990. I will mark as confirmed and high severity as it is a regression, and can look into bisecting what caused it.
Alaska changed title from Uncheck "Load UI" causes failure in direct manipulation of nodes to Uncheck "Load UI" causes failure in direct manipulation of nodes with certain files 2024-09-23 11:19:16 +02:00
Member

Bisecting points to this issue being caused by 83fe5712ab

CC @ideasman42

Bisecting points to this issue being caused by 83fe5712ab6170d0177616f29708120f6cdff037 CC @ideasman42
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-09-24 09:44:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#128012
No description provided.