Fix #128012: disabling "Load UI" makes nodes unselectable

Resolve regression in [0] which caused the tool not to refresh
when loading a file without it's UI.

[0]: 83fe5712ab6170d0177616f29708120f6cdff037